# slurm

./: README.md  project_configure.json  pyproject.toml
slurm/: __config__.py  __init__.py  main.py
