[tool.poetry]
name = "slurm"
version = "0.1.0"
description = "A Slurm Client Tool"
authors = ["Rhythmicc <rhythmlian.cn@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
qpro = "^0.12.8"
quickstart-rhy = "^0.7.3"

[tool.poetry.scripts]
slurm = "slurm.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
